
I have stopped adding to this file, so you will need to look through the source for changes.

..:: XBMC4Xbox 3.5.3 Modifications ::..

1) Changed how the game save menu works, it now doesn't list "TitleMeta.xbx" files as files, there in the own directory like the rest.
2) Increased the Splash screen display time, no point having a nice splash if you dont get to see it.
3) Fullscreen Splashscreen!
4) Faster loading of your games library.
5) Added my Synopsis script to the context menu for the MyPrograms windows
6) Added a new custom window _script*.xml will now be automatically parsed like Custom*.xml
7) Rearranged the folders structure to make it cleaner.
8) removed the extension from Skin.CurrentTheme
9) Moved screensavers to the system folder :) ( Had to use XP to build the screensavers )
10) Added the option to disable the splash image via the advancedsettings.xml ( <splash>false</splash> )
11) system\toggles\no splash.enabled added to the system folder to easily disable the splash if you don't want to use the advancedsettings.xml
12) Reload skin almost instantly, changed for the them selection screen.
13) It now runs the "home_themer.py" script after changing the theme, so it now also works in the Settings menu of XBMC.
	( Also means faster cycling of themes )
14) Fix ported over from Kodi to fix the SetFocus function, it now focuses from the first entry in the list instead of the current page.
15) Removed the remove favourite from the context menu, due to the roms menus not having this feature.
16) When you add favourites or remove them it will now run a script to update the counter for the main menu.
17) Fixed the setting a new language, forgot to change a path.
18) Fonts. sounds and .xpr files are now relocated to .emustation\themes\"theme name"\
	( this allows modular themes and simplicity for uninstalling and installing them via the downloader. )
19) Added a S drive that will point to Q:\.emustation\themes\ as I got fed up going through Q:\ lol