@@ -124,6 +124,15 @@
 										<selected>!Skin.HasSetting(disable_art_download)</selected>
 										<visible>Skin.HasSetting(Show_Scan_Options)</visible>
 								</control>
+								<control type="radiobutton" id="18">
+										<left>0</left>
+										<top>0</top>
+										<label>  -  [UPPERCASE]prefer libretro art[/UPPERCASE]</label>
+										<include>MenuCustomButtonMenuValues</include>
+										<onclick>Skin.ToggleSetting(prefer_libretro_thumbs)</onclick>
+										<selected>Skin.HasSetting(prefer_libretro_thumbs)</selected>
+										<visible>Skin.HasSetting(Show_Scan_Options)</visible>
+								</control>
 <!--								<control type="radiobutton" id="19">-->
 <!--										<left>0</left>-->
 <!--										<top>0</top>-->
